<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutJoinActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBlue"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo_android_72dp" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/app_title"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="40dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- 회원가입 -->

        <!-- 프로필 사진, 닉네입 입력 -->
        <LinearLayout
            android:id="@+id/linearLayoutEmailPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            tools:visibility="visible">

            <EditText
                android:id="@+id/editTextInputEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_rectangle"
                android:hint="@string/edittext_hint_email"
                android:inputType="textEmailAddress"
                android:maxLength="@integer/email_max_length"
                android:paddingLeft="10dp"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBoxAdmin"
                    android:buttonTint="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:checked="true"
                    android:text="@string/admin_join_checkbox" />

                <EditText
                    android:id="@+id/editTextInputAdminCode"
                    android:hint="@string/admin_join_code_hint"
                    tools:visibility="visible"
                    android:visibility="gone"
                    android:paddingLeft="10dp"
                    android:background="@drawable/edittext_rectangle"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:maxLength="@integer/admin_join_code_hint_length"
                    android:layout_marginBottom="10dp"
                    android:layout_height="40dp" />
            </LinearLayout>


            <EditText
                android:id="@+id/editTextInputPasswordFirst"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/edittext_rectangle"
                android:hint="@string/edittext_hint_password"
                android:inputType="textPassword"
                android:maxLength="@integer/password_max_length"
                android:paddingLeft="10dp"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/editTextInputPasswordSecond"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_rectangle"
                android:hint="@string/edittext_hint_password_confirm"
                android:inputType="textPassword"
                android:maxLength="@integer/password_max_length"
                android:paddingLeft="10dp"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/password_info"
                android:textColor="@color/colorWhite"
                android:textSize="14dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutProfileInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="gone">

            <FrameLayout
                android:id="@+id/frameLayoutProfileImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circleImageViewProfileImage"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/ic_profile_default_48dp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|bottom"
                    android:src="@android:drawable/ic_menu_camera"
                    app:civ_border_color="#03A9F4"
                    app:civ_border_width="2dp"
                    app:civ_circle_background_color="@color/colorGray" />
            </FrameLayout>


            <EditText
                android:id="@+id/editTextNickname"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_rectangle"
                android:hint="@string/edittext_hint_nickname"
                android:inputType="textPersonName"
                android:maxLength="@integer/nickname_max_length"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:textSize="18dp" />
            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_rectangle"
                android:hint="핸드폰번호"
                android:inputType="phone"
                android:maxLines="1"
                android:maxLength="@integer/phone_max_length"
                android:paddingLeft="10dp"
                android:textSize="18dp" />
            <EditText
                android:id="@+id/editTextPart"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:background="@drawable/edittext_rectangle"
                android:hint="부서"
                android:inputType="textPersonName"
                android:maxLength="@integer/nickname_max_length"
                android:paddingLeft="10dp"
                android:textSize="18dp" />

        </LinearLayout>
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewDoJoin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/selector_join_button"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/do_join"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textViewSaveProfile"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/selector_join_button"
            android:clickable="true"
            android:gravity="center"
            android:maxLength="@integer/nickname_max_length"
            android:text="@string/save_profile_info"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:visibility="gone" />
    </FrameLayout>


</LinearLayout>
